[package]
name = "aqn-ssg"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
argh = "0.1.13"
askama = "0.15.4"
jiff = { version = "0.2.19", default-features = false, features = ["std", "serde"] }
sea-orm = { version = "2.0.0-rc.30", features = ["runtime-tokio-rustls", "sqlx-mysql"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["macros", "rt"] }

[profile.dev.package.askama_derive]
opt-level = 3
